# seamstress

./: LICENSE  README.md  seamstress.cabal  seamstress.lock-8.0.1
src/: Seamstress.hs
src/Seamstress/: Control.hs  Data.hs
test/: test.hs
